--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,19 @@
 <html>
+<head>
+    <meta charset="utf-8">
+    <title>Подпись документа</title>
+</head>
 <body>
 <form method="POST" enctype="multipart/form-data"
       action="/upload">
-    File to upload: <input type="file" name="file"><br /> Name: <input
-        type="text" name="name"><br /> <br /> <input type="submit"
-                                                     value="Upload"> Press here to upload the file!
+    <label>Документ: <input type="file" name="file"></label><br>
+    <label>Владелец: <input type="text" name="signOwner"> </label><br>
+    <label>Сертификат: <input type="text" name="signCertificate"></label><br>
+    <label>Действителен с <input type="date" name="signDateFrom"> до <input type="date" name="signDateTo"></label><br>
+    <label><input type="checkbox" name="drawLogo" checked="checked"> Рисовать герб</label><br>
+    <label><input type="checkbox" name="checkTransitionToNewPage"> Игнорировать переход на новую страницу</label><br>
+    <br>
+    <label><input type="submit" value="Upload"> Press here to upload the file!</label>
 </form>
 </body>
 </html>
